# GESTTION-HOSPITALIERE

./: CMakeLists.txt  FilePatient.cpp  FilePatient.h  HospitalSystem.cpp  HospitalSystem.h  Patient.cpp  Patient.h  PatientManager.cpp  PatientManager.h  Priority.cpp  Priority.h  README.md  main.cpp
